# ProjecteWeb

./: .gitignore  DeploymentProposal.txt  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  manage.py  nginx.conf  pyproject.toml
projecteWeb/: .env  .env.docker  .env.local  asgi.py  settings.py  urls.py  wsgi.py
projecteWeb/static/stardewApp/: navBar.css
scrapers/: schedule.py  stardewWebScrapper.py  webscrape.py
stardewApp/: admin.py  apps.py  forms.py  models.py  views.py  webscrape.py
stardewApp/features/: login_steps.feature  registration_steps.feature  tests.feature
stardewApp/features/steps/: login_steps.py  new_villager_steps.py  registration_steps.py  update_villager.py
stardewApp/migrations/: 0001_initial.py  0002_alter_schedule_villager.py
stardewApp/scrapers/: stardewWebScrapper.py  webScraper_item.py  webScraper_location.py  webScraper_schedule.py  webScraper_season.py  webScraper_villager.py  webscrape.py
stardewApp/templates/: base.html  home.html  navBar.html
stardewApp/templates/forms/: create_item.html  create_location.html  create_season.html  create_villager.html
stardewApp/templates/lists/: item_list.html  location_list.html  schedule_list.html  season_list.html  villager_list.html
stardewApp/templates/registration/: login.html  logout.html  signup.html
stardewApp/templates/web/: base.html  home.html  navBar.html
stardewApp/templates/web/detail/: item_detail.html  location_detail.html  (+3 more)
stardewApp/tests/: tests.feature
stardewApp/tests/steps/: login_steps.py  new_villager_steps.py  registration_steps.py
(+12 files in other folders)
