[tool.poetry]
name = "ProjecteWeb - Stardew Valley"
version = "0.1.0"
description = "Projecte web de Stardew Valley"
authors = ["Antonio López Gomez <antoniolopez18022002@gmail.com>",
    "David Mas Martinez <david.masmartinez@gmail.com>",
    "Laura Haro Escoi <lauraha.escoi@gmail.com>",
    "Jonàs Salat Torres <jsalattorres@gmail.com>",
    "Guillem Mora Bea <bk203esd@gmail.com"
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
environ = "^1.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
